Fixed the text vertical alignmnet

--- a/public/global.css
+++ b/public/global.css
@@ -65,8 +65,6 @@ button:focus {
 }
 
 .autocomplete-list-item.selected {
-	line-height: 20px;
-	height: 20px;
 	color: #cccccc;
 }
 
